src/test/ui/regions/regions-variance-contravariant-use-covariant-in-second-position.stderr
error[E0623]: lifetime mismatch
  --> $DIR/regions-variance-contravariant-use-covariant-in-second-position.rs:25:30
   |
LL | fn use_<'short,'long>(c: S<'long, 'short>,
   |                          ---------------- this type is declared with multiple lifetimes...
...
LL |     let _: S<'long, 'long> = c;
   |                              ^ ...but data with one lifetime flows into the other here

error: aborting due to previous error

